
Fri Sep  3 16:33:31 PDT 1999
(Raster)

ok - i forgot if i edited something....

-------------------------------------------------------------------------------

Sat Sep  4 00:35:38 PDT 1999
(Raster)

draw queue for handling expoes on dialogs.. more efficient drawing for dialogs
AND now no drawing bugs in non opaque move and resize modes :)

-------------------------------------------------------------------------------

Sat Sep  4 00:41:49 PDT 1999
(Raster)

update TOTO buglist.... ooh its getting short.. :)

-------------------------------------------------------------------------------

Sat Sep  4 08:19:25 PDT 1999
(Raster)

fixed makefile.am to not nuke interactive.sh

-------------------------------------------------------------------------------

Sat Sep  4 09:39:09 PDT 1999
(Raster)

added filename display to background selector..

-------------------------------------------------------------------------------

Sat Sep  4 09:50:18 PDT 1999
(Raster)

in updating brushed metal - forgot to re-add cionbox base image back...

-------------------------------------------------------------------------------

Sun Sep  5 12:12:15 PDT 1999
(Raster)

added an iconification animation, added some more bg's to brushed metal,
changed pager scaning speed to be %03i instead of %i to ensure the label 
remains the same size :)

-------------------------------------------------------------------------------

Sun Sep  5 20:03:56 PDT 1999
(Raster)

and dont asume an iconbox actually can be found and exists

-------------------------------------------------------------------------------

Mon Sep  6 20:33:51 PDT 1999
(Raster)

fixed keyebindings not working on both heads in multihead
fixed focus changing in multihead
group proerties are now all saved to disk and loaded again each session.

gee - only bug left on list is to update all of dox,
only feature left is dnd in iconbox.. :)

now hurry up geoff and christian.. finish off :)