@@ -1318,3 +1318,10 @@ gee - only bug left on list is to update all of dox,
 only feature left is dnd in iconbox.. :)
 
 now hurry up geoff and christian.. finish off :)
+
+-------------------------------------------------------------------------------
+
+Tue Sep  7 00:12:33 PDT 1999
+(Raster)
+
+you can now drag from the pager into the iconbox.. :)
